--- a/.github/workflows/zaproxy.yml
+++ b/.github/workflows/zaproxy.yml
@@ -16,6 +16,31 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: master
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Build application
+        run: ./mvnw -B -DskipTests package
+
+      - name: Start application
+        run: nohup java -jar target/d13revision-0.0.1-SNAPSHOT.jar >/dev/null 2>&1 &
+
+      - name: Wait for application to be ready
+        run: |
+          for i in {1..30}; do
+            if curl -sSf http://localhost:8085/ >/dev/null; then
+              echo "App is up";
+              exit 0;
+            fi
+            sleep 2;
+          done
+          echo "App did not start in time" >&2
+          exit 1
+
       - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.12.0
         with:
@@ -23,3 +48,7 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           target: 'http://localhost:8085/'
           cmd_options: '-a'
+
+      - name: Stop application
+        if: always()
+        run: pkill -f d13revision-0.0.1-SNAPSHOT.jar || true
