ZAP: start Spring Boot on 8085 and wait before scan

--- a/.github/workflows/zaproxy.yml
+++ b/.github/workflows/zaproxy.yml
@@ -27,7 +27,7 @@ jobs:
         run: ./mvnw -B -DskipTests package
 
       - name: Start application
-        run: nohup java -jar target/d13revision-0.0.1-SNAPSHOT.jar >/dev/null 2>&1 &
+        run: nohup java -jar target/d13revision-0.0.1-SNAPSHOT.jar --server.port=8085 >/dev/null 2>&1 &
 
       - name: Wait for application to be ready
         run: |
